[package]

name = "stable_bst"
version = "0.0.1"
license = "MIT/Apache-2.0"
description = "An ordered map and set based on a binary search tree."

authors = [
    "Alexis Beingessner <a.beingessner@gmail.com>",
    "Andrew Paseltiner <apaseltiner@gmail.com>",
    "Robert O'Callahan <robert@ocallahan.org>",
]

repository = "https://github.com/rocallahan/stable-bst"
documentation = "https://rocallahan.github.io/stable-bst/doc"
keywords = ["data-structures"]
readme = "README.md"

[features]

default = ["ordered_iter"]

[dependencies]

compare = "*"
ordered_iter = { version = "*", optional=true }

[dev-dependencies]

rand = "*"
