[package]

name = "stable_bst"
version = "0.2.0"
license = "MIT/Apache-2.0"
description = "An ordered map and set based on a binary search tree. Works with stable Rust 1.9.0."

authors = [
    "Alexis Beingessner <a.beingessner@gmail.com>",
    "Andrew Paseltiner <apaseltiner@gmail.com>",
    "Robert O'Callahan <robert@ocallahan.org>",
]

repository = "https://github.com/rocallahan/stable-bst"
documentation = "https://rocallahan.github.io/stable-bst/doc/stable_bst"
keywords = ["data-structures"]
readme = "README.md"

[features]

default = ["ordered_iter"]

[dependencies]

compare = "0.0"
ordered_iter = { version = "0.1", optional=true }

[dev-dependencies]

rand = "0.3"
